# agent-tower

./: .env.sample  .gitignore  CNAME  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SCREENSHOTS_NEEDED.md  SECURITY.md  SPEC.md  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  docs.yml  update-pricing.yml
alembic/versions/: 0004_add_job_metrics.py  0006_add_requires_explicit_approval.py  0011_merge_review_and_observations_heads.py  0012_error_kind.py  0013_merge_parent_job_and_error_kind.py  0015_add_steps.py  0016_add_job_description.py  0017_add_subagent_cost.py  0018_add_turn_id_to_spans.py  0019_add_motivation_columns.py  0020_add_step_preceding_context.py  0021_add_edit_motivations.py  0022_add_story_text.py  0023_add_trail_nodes.py  0024_trail_transcript_context.py  0025_add_story_verbosity_columns.py  0026_trail_diff_stats.py  0026_trail_outcome_status.py  0027_action_policy.py  0028_drop_daily_budget_usd.py  0029_write_sub_nodes.py  0030_trail_state_snapshot.py  0031_add_preset_column.py  0032_latency_attribution.py  2bc3888114b0_merge_heads.py  8b0b1c2ee2d1_add_merge_status_to_jobs.py  a1b2c3d4e5f6_add_pr_url_to_jobs.py  b30bc0b5e8f0_merge_model_migration.py
backend/: __init__.py  app_factory.py  cli.py  config.py  console_dashboard.py  di.py  lifespan.py  logging_config.py  main.py  validators.py
backend/api/: analytics.py  approvals.py  artifacts.py  deps.py  events.py  health.py  job_artifacts.py  job_telemetry.py  jobs.py  notifications.py  policy_settings.py  preview.py  settings.py  share.py  terminal.py  trail.py  utility_sessions.py  voice.py  workspace.py
backend/mcp/: __init__.py  server.py
backend/models/: api_schemas.py  db.py  domain.py  events.py
backend/persistence/: __init__.py  approval_repo.py  artifact_repo.py  cost_attribution_repo.py  database.py  event_repo.py  file_access_repo.py  job_repo.py  latency_attribution_repo.py  metrics_repo.py  observations_repo.py  policy_repo.py  repository.py  step_repo.py  telemetry_analytics_repo.py  telemetry_spans_repo.py  telemetry_summary_repo.py  trail_repo.py
backend/services/: __init__.py  adapter_registry.py  agent_adapter.py  analytics_service.py  approval_service.py  artifact_service.py  auth.py  base_adapter.py  cf_access.py  claude_adapter.py  conversation_ledger.py  copilot_adapter.py  cost_attribution.py  diff_service.py  event_bus.py  execution_strategy.py  git_service.py  job_service.py  journey_report_service.py  latency_attribution.py  lightweight_completer.py  merge_service.py  motivation_service.py  naming_service.py  parsing_utils.py  permission_policy.py  platform_adapter.py  progress_tracking_service.py  push_service.py  retention_service.py  retry_tracker.py  runtime_handoff.py  runtime_resume.py  runtime_service.py  runtime_telemetry.py  runtime_verify.py  setup_checks.py  setup_dependencies.py  setup_service.py  setup_wizard.py  (+23 more)
backend/templates/: login.html
demo-video/: package.json
demo-video/capture/: capture-screenshots.ts  fixtures.ts  run.ts
demo-video/src/: DemoVideo.tsx  captions.ts  constants.ts
docs/: DI_ANALYSIS.md  SCREENSHOTS.md  access-architecture-recommendation.md  analytics.md  architecture.md  configuration.md  guide.md  index.md  mcp-server.md  quick-start.md  security.md  ux-audit-2026-04-07.md  ux-red-team-2026-04-21.md
docs/architecture/: agent-adapters.md  backend.md  cloud-native.md  frontend.md  index.md
docs/contributing/: ci-cd.md  conventions.md  development.md  index.md  project-structure.md  termbeam-security-takeaways.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tsconfig.tsbuildinfo  vite.config.ts
tools/: context_snapshot_eval.py  context_window_eval.py  dev_restart.py  drain_rate_eval.py  extract_rich_context.py  extract_write_context.py  hatch_build.py  motivation_distance.py  remaining_numbers_eval.py  rich_summaries.py
(+358 files in other folders)
