[project]
name = "codeplane"
version = "0.1.0"
description = "A control plane for running and supervising coding agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "python-multipart>=0.0.26,<1",
    # Database
    "sqlalchemy>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "alembic>=1.14,<2",
    # Agent SDK
    "github-copilot-sdk~=0.1.32",
    # Structured logging
    "structlog>=24.0,<26",
    # Terminal UI
    "rich>=13.0,<14",
    # Config
    "pyyaml>=6.0,<7",
    # Pydantic (used by FastAPI)
    "pydantic>=2.0,<3",
    # CLI
    "click>=8.0,<9",
    "questionary>=2.0,<3",
    # MCP server
    "mcp>=1.9,<2",
    # Windows ConPTY terminal backend (POSIX uses the stdlib pty module)
    "pywinpty>=2.0 ; sys_platform == 'win32'",
    "claude-code-sdk~=0.0.25",
    "httpx>=0.28,<1",
    "dishka[fastapi]>=1.9.1,<2",
    "tiktoken>=0.12.0,<1",
    "anthropic-tokenizer>=0.1.0,<1",
    "pyjwt[crypto]>=2.12.0,<3",
    "cryptography>=46.0.7,<47",
]

[project.optional-dependencies]
voice = ["faster-whisper>=1.1,<2"]
push = ["pywebpush>=2.3.0", "py-vapid>=1.9.4", "qrcode>=7.0,<9"]
telemetry = ["opentelemetry-api>=1.20,<2", "opentelemetry-sdk>=1.20,<2"]
all = [
    "codeplane[voice]",
    "codeplane[push]",
    "codeplane[telemetry]",
]

[project.scripts]
cpl = "backend.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = ["backend/web/**"]

[tool.hatch.build.hooks.custom]
path = "tools/hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

[tool.ruff.lint.flake8-type-checking]
# dishka resolves FromDishka[T] annotations at runtime via get_type_hints(),
# so types referenced in route handler signatures must be importable at runtime.
runtime-evaluated-decorators = ["dishka.integrations.fastapi.FromDishka"]

[tool.ruff.lint.per-file-ignores]
# Route handlers use dishka FromDishka[T] annotations that are resolved at
# runtime — imports for these types must stay outside TYPE_CHECKING blocks.
"backend/api/*.py" = ["TC001", "TC002"]
"backend/di.py" = ["TC001", "TC002", "TC003"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["faster_whisper.*", "copilot.*", "mcp.*", "qrcode.*", "questionary.*", "winpty.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["backend.mcp.server"]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["backend.tests.*"]
strict = false
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disable_error_code = ["arg-type", "no-untyped-def", "no-untyped-call", "attr-defined"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
    "ignore:coroutine .* was never awaited:RuntimeWarning",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/tests/*",
    "backend/tests/**/*",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_empty = true

[dependency-groups]
dev = [
    "codeplane[all]",
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "types-PyYAML",
    "mypy>=1.13,<2",
    "ruff>=0.8,<1",
    "pre-commit>=4.0,<5",
    "pip-audit>=2.10.0",
]
